fix: package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "exitingVim/oauth2-vk",
+    "name": "exitingvim/oauth2-vk",
     "description": "Vkontakte provider for league/oauth2-client",
     "keywords": [
         "league",
